--- a/.github/workflows/validate_relaxng.yml
+++ b/.github/workflows/validate_relaxng.yml
@@ -10,7 +10,6 @@ jobs:
     - name: Validate articles
       uses: rlskoeser/xmllint-action@support-other-schemas
       with:
-        # xml-file: articles/[0-9]*/*.xml
-        xml-file: articles/999999/999999.xml
+        xml-file: articles/[0-9]*/*.xml
         xml-schema-file: common/schema/DHQauthor-TEI.rng
         xml-schema-type: relaxng
