Try enabling xmllint problem matcher

--- a/.github/workflows/validate_relaxng.yml
+++ b/.github/workflows/validate_relaxng.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
+    - name: Enable xmllint matcher
+      uses: korelstar/xmllint-problem-matcher@v1
     - name: Validate articles
       uses: rlskoeser/xmllint-action@support-other-schemas
       with:
