Add schematron validation workflow

--- a/.github/workflows/validate_schematron.yml
+++ b/.github/workflows/validate_schematron.yml
@@ -1,9 +1,9 @@
-name: validate relaxng
+name: validate schematron
 
 on: [push]
 
 jobs:
-  validate-relaxng:
+  validate-schematron:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
@@ -13,5 +13,5 @@ jobs:
       uses: rlskoeser/xmllint-action@support-other-schemas
       with:
         xml-file: articles/[0-9]*/*.xml
-        xml-schema-file: common/schema/DHQauthor-TEI.rng
-        xml-schema-type: relaxng
+        xml-schema-file: common/schema/dhqTEI-ready.sch
+        xml-schema-type: schematron
