Add article count to summary output

--- a/.github/workflows/validate_relaxng.yml
+++ b/.github/workflows/validate_relaxng.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
+    - name: Count articles
+      run: echo '::set-output name=TOTAL::`ls articles/[0-9]*/*.xml | wc -l`'
+      id: article-count
+    - name: Output article count
+      run: echo "Validating ${{ steps.article-count.outputs.TOTAL }} articles" >> GITHUB_STEP_SUMMARY
     - name: Enable xmllint matcher
       uses: korelstar/xmllint-problem-matcher@v1
     - name: Validate articles
