Use merged version of xmllint action
...

--- a/.github/workflows/validate_schematron.yml
+++ b/.github/workflows/validate_schematron.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Enable xmllint matcher
       uses: korelstar/xmllint-problem-matcher@v1
     - name: Validate articles
-      uses: rlskoeser/xmllint-action@support-other-schemas
+      uses: ChristophWurst/xmllint-action@master
       with:
         xml-file: articles/[0-9]*/*.xml
         xml-schema-file: common/schema/dhqTEI-ready.sch
