--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 articles/[0-9][0-9][0-9][0-9][0-9][0-9]/[0-9][0-9][0-9][0-9][0-9][0-9].pdf
 articles/+111111+/111111.xhtml
 articles/+111111+/111111.xhtml
+articles/+111111+/111111.xhtml
+articles/+111111+/111111.xhtml
