Create Apache Ant buildfile.
Only working task so far is to generate a preview version of a
given article.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ articles/+111111+/111111.xhtml
 articles/+111111+/111111.xhtml
 articles/+111111+/111111.xhtml
 articles/+111111+/111111.xhtml
+dhq-preview
