Add Saxon HE licenses

--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,17 @@
 <project xmlns:if="ant:if" xmlns:unless="ant:unless" 
-   default="previewArticle" 
-   name="dhq">
+   name="dhq"
+   default="previewArticle">
   
   <!--
     Apache Ant buildfile for Digital Humanities Quarterly.
     -->
   
 <!-- 
-    PROPERTIES
-  -->
-  <!-- See build-properties.xml for the settings used in this file. When referenced, 
+    See build-properties.xml for the settings used in this file. When referenced, 
     properties look like this:
       ${toDir}
-    For more information, see https://ant.apache.org/manual/Tasks/xmlproperty.html -->
+    For more information, see https://ant.apache.org/manual/Tasks/xmlproperty.html
+  -->
   <xmlproperty file="build-properties.xml" keepRoot="false"/>
   
   
