--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
     
   </target>
   
-  <!-- Generate a static version of the website. -->
+  <!-- Generate a static version of the DHQ website. -->
   <target name="generateSite" depends="generateArticles">
     <mkdir dir="${toDir}/${context}"/>
     <!-- TODO -->
