--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,19 @@
   <!-- Generate static HTML versions of the DHQ articles. -->
   <target name="generateArticles">
     <mkdir dir="${toDir}/${context}/vol"/>
-    
+    <!-- Transform the article with XSLT. -->
+    <xslt in="toc/toc.xml" 
+          out="${toDir}/article-map.xml"
+          style="common/xslt/generate_static_articles.xsl"
+          classpath="${processor.location}"
+          force="true"
+          failonerror="false">
+      <factory name="${processor.name}"/>
+      <param name="context" expression="${context}"/>
+      <param name="dir-separator" expression="${file.separator}"/>
+      <!--<param name="repo-dir" expression="${basedir}"/>-->
+      <param name="static-dir" expression="${toDir}/${context}"/>
+    </xslt>
   </target>
   
   <!-- Generate a static version of the DHQ website. -->
