Small tweaks, mostly to comments

--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
   <!-- Generate static HTML versions of the DHQ articles. -->
   <target name="generateArticles">
     <mkdir dir="${toDir}/${context}/vol"/>
-    <!-- Transform the article with XSLT. -->
+    <!-- Use XSLT to transform articles using the DHQ table of contents. -->
     <xslt in="toc/toc.xml" 
           out="${toDir}/article-map.xml"
           style="common/xslt/generate_static_articles.xsl"
