--- a/build.xml
+++ b/build.xml
@@ -21,11 +21,11 @@
   
   <!-- Generate static HTML versions of the DHQ articles. -->
   <target name="generateArticles">
-    <mkdir dir="${toDir}/${context}/vol"/>
+    <mkdir dir="${toDir}${file.separator}${context}${file.separator}vol"/>
     <!-- Use XSLT to transform articles using the DHQ table of contents. -->
-    <xslt in="toc/toc.xml" 
-          out="${toDir}/article-map.xml"
-          style="common/xslt/generate_static_articles.xsl"
+    <xslt in="toc${file.separator}toc.xml" 
+          out="${toDir}${file.separator}article-map.xml"
+          style="common${file.separator}xslt${file.separator}generate_static_articles.xsl"
           classpath="${processor.location}"
           force="true"
           failonerror="false">
@@ -33,21 +33,21 @@
       <param name="context" expression="${context}"/>
       <param name="dir-separator" expression="${file.separator}"/>
       <!--<param name="repo-dir" expression="${basedir}"/>-->
-      <param name="static-dir" expression="${toDir}/${context}"/>
+      <param name="static-dir" expression="${toDir}${file.separator}${context}"/>
     </xslt>
   </target>
   
   <!-- Generate a static version of the DHQ website. -->
   <target name="generateSite" depends="generateArticles">
-    <mkdir dir="${toDir}/${context}"/>
+    <mkdir dir="${toDir}${file.separator}${context}"/>
     <!-- TODO -->
     <antcall target="compressStatic"/>
   </target>
   
   <!-- Compress the static site's files for backup and transportation. -->
   <target name="compressStatic">
-    <zip destfile="${toDir}/${context}.zip">
-      <fileset dir="${toDir}/${context}"/>
+    <zip destfile="${toDir}${file.separator}${context}.zip">
+      <fileset dir="${toDir}${file.separator}${context}"/>
     </zip>
   </target>
   
@@ -69,17 +69,18 @@
       build-properties.xml. -->
     <mkdir dir="${previewDir}"/>
     <!-- Transform the article with XSLT. -->
-    <xslt in="articles/${article.id}/${article.id}.xml" 
-          out="${previewDir}/${article.id}.html"
-          style="common/xslt/template_article.xsl"
+    <xslt in="articles${file.separator}${article.id}${file.separator}${article.id}.xml" 
+          out="${previewDir}${file.separator}${article.id}.html"
+          style="common${file.separator}xslt${file.separator}template_article.xsl"
           classpath="${processor.location}"
           force="true"
-          failonerror="false">
+          failOnTransformationError="false">
       <factory name="${processor.name}"/>
       <param name="context" expression="dhq"/>
-      <param name="assets-path" expression="../"/>
+      <param name="dir-separator" expression="${file.separator}"/>
+      <param name="assets-path" expression="..${file.separator}"/>
     </xslt>
-    <echo message="Created article preview at ${previewDir}/${article.id}.html"/>
+    <echo message="Created article preview at ${previewDir}${file.separator}${article.id}.html"/>
   </target>
   
 </project>
