Comment out call to external Ant build file.
When restored, `generateSite` will try to find a derived build file
"article-mapper.xml" which maps article directories from their
source to the expected web directories.

--- a/build.xml
+++ b/build.xml
@@ -15,13 +15,6 @@
   <xmlproperty file="build-properties.xml" keepRoot="false"/>
   <property name="toDir.path"
     value="..${file.separator}${toDir}${file.separator}${context}"/>
-  <!--<mapper id="article.map">
-      <firstmatchmapper>
-        <regexpmapper from="^000654/(.*)$" to="vol/17/1/000654/\1" handledirsep="true"/>
-        <regexpmapper from="^000116/(.*)$" to="vol/7/2/000116/\1" handledirsep="true"/>
-      </firstmatchmapper>
-    
-  </mapper>-->
   
   <!-- Check for the XML Resolver Java class, as it is a dependency for using the 
     Saxon HE processor. From the Saxon documentation on XSLT with Ant:
@@ -74,13 +67,9 @@ is loaded when Ant starts up. Please run Ant again like this:
   <!-- Generate a static version of the DHQ website. -->
   <target name="generateSite" depends="checkXmlResolver">
     <mkdir dir="${toDir.path}"/>
-    <!--<ant antfile="..${file.separator}${toDir}${file.separator}article-mapper.xml" inheritRefs="true">
-      <reference refid="map" torefid="article.map"/>
-    </ant>
-    <copy todir="${toDir.path}">
-      <fileset dir="articles"/>
-      <!-\-<mapper refid="article.map"/>-\->
-    </copy>-->
+    <!--<ant 
+       antfile="..${file.separator}${toDir}${file.separator}article-mapper.xml" 
+       target="copyArticleResources" inheritRefs="true"/>-->
     <!-- Copy specific files in the base directory. -->
     <copy todir="${toDir.path}">
       <filelist dir=".">
