Tweak name of ZIP file

--- a/build.xml
+++ b/build.xml
@@ -170,7 +170,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       common directory. -->
     <property name="assets.path" value=".${file.separator}"/>
     <antcall target="previewArticle" inheritall="yes"/>
-    <zip destfile="${previewDir}${file.separator}${article.id}.zip">
+    <zip destfile="${previewDir}${file.separator}dhq-article-${article.id}.zip">
       <fileset dir="." includes="common/css/ common/js/"/>
       <fileset dir=".${file.separator}articles${file.separator}${article.id}" 
         excludes="**${file.separator}${article.id}.xml"/>
