Small edits to comments.
Default Ant task is back to 'previewArticle'

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project xmlns:if="ant:if" xmlns:unless="ant:unless" 
    name="dhq"
-   default="zipPreviewArticle">
+   default="previewArticle">
   
   <description>
     Apache Ant buildfile for Digital Humanities Quarterly.
