Fix paths when generating static article HTML

--- a/build.xml
+++ b/build.xml
@@ -51,7 +51,7 @@ is loaded when Ant starts up. Please run Ant again like this:
     <mkdir dir="${toDir.path}${file.separator}vol"/>
     <!-- Use XSLT to transform articles using the DHQ table of contents. -->
     <xslt in="toc${file.separator}toc.xml" 
-          out="${toDir.path}${file.separator}article-map.xml"
+          out="..${file.separator}${toDir}${file.separator}article-map.xml"
           style="common${file.separator}xslt${file.separator}generate_static_articles.xsl"
           classpath="${processor.location}"
           force="true"
@@ -59,8 +59,9 @@ is loaded when Ant starts up. Please run Ant again like this:
       <factory name="${processor.name}"/>
       <param name="context" expression="${context}"/>
       <param name="dir-separator" expression="${file.separator}"/>
-      <!--<param name="repo-dir" expression="${basedir}"/>-->
-      <param name="static-dir" expression="${toDir}${file.separator}${context}"/>
+      <!-- A relative path in <xsl:result-document> will be calculated relative to 
+        the output file's directory, ${toDir}. -->
+      <param name="static-dir" expression="${context}"/>
     </xslt>
   </target>
   
