With Ash make minor fixes to static site generation such that it now works EXCEPT that we have not generated the individual volume/issue index pages yet.

--- a/build.xml
+++ b/build.xml
@@ -71,13 +71,13 @@ is loaded when Ant starts up. Please run Ant again like this:
       <param name="static-dir" expression="${context}"/>
     </xslt>
   </target>
-  
+
   <!-- Generate a static version of the DHQ website. -->
-  <target name="generateSite" depends="checkXmlResolver">
+  <target name="generateSite" depends="checkXmlResolver,generateArticles">
     <mkdir dir="${toDir.static}"/>
-    <!--<ant 
-       antfile="${toDir.base}${file.separator}article-mapper.xml" 
-       target="copyArticleResources" inheritRefs="true"/>-->
+    <ant 
+       antfile="${toDir.base}${file.separator}article-map.xml" 
+       target="copyArticleResources" inheritRefs="true"/>
     <!-- Copy specific files in the base directory. -->
     <copy todir="${toDir.static}">
       <filelist dir=".">
@@ -120,7 +120,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       <param name="context" expression="dhq"/>
       <param name="dir-separator" expression="${file.separator}"/>
     </xslt>
-    <!--<antcall target="compressStatic"/>-->
+    <antcall target="compressStatic"/>
   </target>
   
   <!-- Compress the static site's files for backup and transportation. -->
