Add `$doProofing` parameter to get around TOC check on articles.

--- a/build.xml
+++ b/build.xml
@@ -162,6 +162,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       <param name="assets-path" expression="${assets.path}"/>
       <param name="context" expression="dhq"/>
       <param name="dir-separator" expression="${file.separator}"/>
+      <param name="doProofing" expression="true"/>
     </xslt>
     <echo message="Created article preview at ${previewDir}${file.separator}${article.id}.html"/>
   </target>
