Change name of generation routine to "issue" (from "article") because it does more than just articles

--- a/build.xml
+++ b/build.xml
@@ -52,14 +52,14 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo level="info">OK</echo>
   </target>
   
-  <!-- Generate static HTML versions of the DHQ articles. -->
-  <target name="generateArticles" depends="checkXmlResolver" 
-     description="Generate static HTML versions of the DHQ articles.">
+  <!-- Generate static HTML versions of the DHQ issues (articles, bios, & indices). -->
+  <target name="generateIssues" depends="checkXmlResolver" 
+     description="Generate static HTML versions of the DHQ issues.">
     <mkdir dir="${toDir.static}${file.separator}vol"/>
-    <!-- Use XSLT to transform articles using the DHQ table of contents. -->
+    <!-- Use XSLT to transform issues using the DHQ table of contents. -->
     <xslt in="toc${file.separator}toc.xml" 
           out="${toDir.base}${file.separator}article-map.xml"
-          style="common${file.separator}xslt${file.separator}generate_static_articles.xsl"
+          style="common${file.separator}xslt${file.separator}generate_static_issues.xsl"
           classpath="${processor.location}"
           force="true"
           failonerror="false">
@@ -73,7 +73,7 @@ is loaded when Ant starts up. Please run Ant again like this:
   </target>
 
   <!-- Generate a static version of the DHQ website. -->
-  <target name="generateSite" depends="checkXmlResolver,generateArticles">
+  <target name="generateSite" depends="checkXmlResolver,generateIssues">
     <mkdir dir="${toDir.static}"/>
     <ant 
        antfile="${toDir.base}${file.separator}article-map.xml" 
