Update some comments; small code tweaks

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     Apache Ant buildfile for Digital Humanities Quarterly.
   </description>
   
-<!-- 
+  <!-- 
     See build-properties.xml for the settings used in this file. When referenced, 
     properties look like this:
       ${toDir}
@@ -73,11 +73,13 @@ is loaded when Ant starts up. Please run Ant again like this:
   </target>
 
   <!-- Generate a static version of the DHQ website. -->
-  <target name="generateSite" depends="checkXmlResolver,generateIssues">
+  <target name="generateSite" depends="checkXmlResolver,generateIssues"
+     description="Generate a full static copy of DHQ intended for the DHQ server. This is NOT a standalone copy.">
     <mkdir dir="${toDir.static}"/>
-    <ant 
-       antfile="${toDir.base}${file.separator}article-map.xml" 
-       target="copyArticleResources" inheritRefs="true"/>
+    <!-- Use the Ant build file created in "generateIssues" to copy articles' 
+      resources to the right static directories. -->
+    <ant antfile="${toDir.base}${file.separator}article-map.xml" 
+         target="copyArticleResources" inheritRefs="true"/>
     <!-- Copy specific files in the base directory. -->
     <copy todir="${toDir.static}">
       <filelist dir=".">
