Remove ".xhtml" files from preview ZIPs

--- a/build.xml
+++ b/build.xml
@@ -184,7 +184,7 @@ is loaded when Ant starts up. Please run Ant again like this:
     <zip destfile="${previewDir}${file.separator}dhq-article-${article.id}.zip">
       <fileset dir="." includes="common/css/ common/js/"/>
       <fileset dir=".${file.separator}articles${file.separator}${article.id}" 
-        excludes="**${file.separator}${article.id}.xml"/>
+        excludes="**${file.separator}${article.id}.xml **${file.separator}${article.id}.xhtml"/>
       <fileset dir="${previewDir}">
         <filename name="${article.id}.html"/>
       </fileset>
