Check if forward-slashes are okay for dir-separators in Windows

--- a/build.xml
+++ b/build.xml
@@ -116,7 +116,7 @@ is loaded when Ant starts up. Please run Ant again like this:
           failonerror="false">
       <factory name="${processor.name}"/>
       <param name="context" expression="${context}"/>
-      <param name="dir-separator" expression="${file.separator}"/>
+      <!--<param name="dir-separator" expression="${file.separator}"/>-->
       <!-- A relative path in <xsl:result-document> will be calculated relative to 
         the output file's directory, ${toDir}. -->
       <param name="static-dir" expression="${context}"/>
@@ -171,7 +171,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       </mapper>
       <param name="assets-path" expression="..${file.separator}"/>
       <param name="context" expression="dhq"/>
-      <param name="dir-separator" expression="${file.separator}"/>
+      <!--<param name="dir-separator" expression="${file.separator}"/>-->
     </xslt>
     <antcall target="compressStatic"/>
   </target>
